move macros to token layer